# paylinker-django

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/paylinker_django/: __init__.py  admin.py  apps.py  conf.py  models.py  urls.py  views.py
src/paylinker_django/handlers/: __init__.py  click.py  payme.py
src/paylinker_django/migrations/: 0001_initial.py
tests/: settings.py  test_click_handler.py
